--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -33,7 +33,7 @@
         formControlName="gender"
         class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-secondary-500"
       >
-        <option value="">Selecciona tu Genero</option>
+        <option value="">Selecciona tu genero</option>
         <option value="M">Masculino</option>
         <option value="F">Femenino</option>
       </select>
