Eliminacion de usuarios

--- a/src/app/admin/pages/users-page/user-details/user-details.component.html
+++ b/src/app/admin/pages/users-page/user-details/user-details.component.html
@@ -172,10 +172,33 @@
       </button>
 
       <button
-        class="bg-error-500 hover:bg-error-600 text-text rounded p-2 w-30 font-semibold cursor-pointer"
+        class="bg-error-500 hover:bg-error-300 text-text rounded p-2 w-30 font-semibold cursor-pointer"
+        (click)="delete(user()._id)"
       >
         Eliminar
       </button>
     </section>
   </section>
+  @if(showSuccess()) {
+  <div
+    role="alert"
+    class="alert bg-success-700 text-text font-semibold flex items-center gap-2 mt-4 transition"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="h-6 w-6 shrink-0 stroke-current"
+      fill="none"
+      viewBox="0 0 24 24"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
+      />
+    </svg>
+    <span>Usuario eliminado correctamente!</span>
+  </div>
+  }
 </main>
+<!-- <shared-alert [message]="'Usuario eleminado con éxito'" [type]="'success'" /> -->
