--- a/src/app/admin/components/create-user-modal/create-user-modal.component.html
+++ b/src/app/admin/components/create-user-modal/create-user-modal.component.html
@@ -1,7 +1,7 @@
-<div
+<main
   class="fixed inset-0 flex flex-col items-center justify-center bg-black/50 z-50"
 >
-  <div
+  <section
     class="bg-white dark:bg-gray-800 p-6 rounded-lg w-full max-w-md shadow-lg relative"
   >
     <!-- Botón cerrar -->
@@ -171,8 +171,7 @@
         Crear usuario
       </button>
     </form>
-  </div>
-
+  </section>
   @if(showSuccess()) {
   <div
     role="alert"
@@ -194,4 +193,4 @@
     <span>Usuario creado correctamente!</span>
   </div>
   }
-</div>
+</main>
