--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -40,14 +40,12 @@
         <input
           aria-describedby="remember"
           type="checkbox"
-          class="w-4 h-4 cursor-pointer"
+          class="accent-secondary-500 w-4 h-4 cursor-pointer"
           formControlName="rememberMe"
         />
       </div>
       <div class="ml-3 text-sm">
-        <label
-          for="remember"
-          class="text-gray-500 dark:text-gray-300 cursor-pointer"
+        <label for="remember" class="text-gray-500 dark:text-gray-300"
           >Recordarme</label
         >
       </div>
