--- a/src/app/admin/pages/users-page/users-page.component.html
+++ b/src/app/admin/pages/users-page/users-page.component.html
@@ -1,5 +1,5 @@
 <section class="bg-white rounded-lg shadow flex flex-col h-[70vh]">
-  <article class="flex items-center gap-2 px-5 pt-5">
+  <article class="flex items-center gap-2 px-5 pt-5 pb-2">
     <input
       type="text"
       placeholder="Buscar usuario..."
