--- a/src/app/admin/components/title-page/title-page.component.html
+++ b/src/app/admin/components/title-page/title-page.component.html
@@ -1,6 +1,19 @@
 @for (page of pages; track page.message) {
-<section class="mb-5">
-  <h2 class="font-bold text-2xl text-text">{{ page.label }}</h2>
-  <p class="text-slate-600">{{ page.message }}</p>
+<section class="mb-2 flex justify-between items-center">
+  <div>
+    <div class="flex items-center gap-2 mb-2">
+      <img [src]="page.icon + '.svg'" [alt]="page.label" class="w-8 h-8" />
+      <h2 class="font-bold text-2xl text-text">{{ page.label }}</h2>
+    </div>
+    <p class="text-slate-600">{{ page.message }}</p>
+  </div>
+
+  @if (page.label === "Atletas") {
+  <button
+    class="px-4 py-2 bg-secondary-500 text-text font-semibold rounded-md shadow cursor-pointer hover:bg-secondary-600 ease-in"
+  >
+    + Crear atleta
+  </button>
+  }
 </section>
 }
